Atlas theme - correction of arrows position
Corrected the position of the arrows in the default timeline 1px to the
right so that they are not overlapped by their panels.

Created a button to scroll to top of the page

For this button, I added
a new page to the componets section because it
would conflict with other
elements in the buttons page and  because I
think this item is more a
navigational aid than a real button that
triggers some kind of action.

--- a/src/scss/atlas-theme/_timelines.scss
+++ b/src/scss/atlas-theme/_timelines.scss
@@ -52,7 +52,7 @@
 			border-right: 10px solid #FFF;
 			border-top: 10px solid transparent;
 			content: " ";
-			left: -11px;
+			left: -10px;
 			position: absolute;
 			top: 8px;
 		}
@@ -62,7 +62,7 @@
 			border-right: 11px solid #FFF;
 			border-top: 11px solid transparent;
 			content: " ";
-			left: -12px;
+			left: -11px;
 			position: absolute;
 			top: 7px;
 		}
